--- a/Indexing/MTMainWindowController.xib
+++ b/Indexing/MTMainWindowController.xib
@@ -277,6 +277,7 @@
 											<array class="NSMutableArray" key="NSSubviews"/>
 											<string key="NSFrameSize">{148, 318}</string>
 											<reference key="NSSuperview" ref="485556613"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="924329590"/>
 											<string key="NSReuseIdentifierKey">_NS:13</string>
 											<bool key="NSEnabled">YES</bool>
@@ -379,6 +380,7 @@
 									</array>
 									<string key="NSFrame">{{1, 1}, {148, 318}}</string>
 									<reference key="NSSuperview" ref="595383528"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="682978220"/>
 									<string key="NSReuseIdentifierKey">_NS:11</string>
 									<reference key="NSDocView" ref="682978220"/>
@@ -390,6 +392,7 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 									<reference key="NSSuperview" ref="595383528"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="966985489"/>
 									<string key="NSReuseIdentifierKey">_NS:15</string>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -402,6 +405,7 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{1, 119}, {238, 15}}</string>
 									<reference key="NSSuperview" ref="595383528"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="214051233"/>
 									<string key="NSReuseIdentifierKey">_NS:60</string>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -413,6 +417,7 @@
 							</array>
 							<string key="NSFrame">{{20, 20}, {150, 320}}</string>
 							<reference key="NSSuperview" ref="914934427"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="485556613"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<int key="NSsFlags">133682</int>
@@ -437,6 +442,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrameSize">{280, 302}</string>
 											<reference key="NSSuperview" ref="416967183"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="460555406"/>
 											<string key="NSReuseIdentifierKey">_NS:13</string>
 											<bool key="NSEnabled">YES</bool>
@@ -447,6 +453,7 @@
 												<int key="NSvFlags">256</int>
 												<string key="NSFrameSize">{280, 17}</string>
 												<reference key="NSSuperview" ref="980019924"/>
+												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="416967183"/>
 												<string key="NSReuseIdentifierKey">_NS:16</string>
 												<reference key="NSTableView" ref="759651840"/>
@@ -466,7 +473,7 @@
 													<object class="NSTableHeaderCell" key="NSHeaderCell">
 														<int key="NSCellFlags">75497536</int>
 														<int key="NSCellFlags2">2048</int>
-														<string key="NSContents"/>
+														<string key="NSContents">Name</string>
 														<reference key="NSSupport" ref="26"/>
 														<object class="NSColor" key="NSBackgroundColor" id="62337316">
 															<int key="NSColorSpace">3</int>
@@ -495,7 +502,7 @@
 													<object class="NSTableHeaderCell" key="NSHeaderCell">
 														<int key="NSCellFlags">75497536</int>
 														<int key="NSCellFlags2">2048</int>
-														<string key="NSContents"/>
+														<string key="NSContents">Genre</string>
 														<reference key="NSSupport" ref="26"/>
 														<reference key="NSBackgroundColor" ref="62337316"/>
 														<reference key="NSTextColor" ref="1062823080"/>
@@ -533,6 +540,7 @@
 									</array>
 									<string key="NSFrame">{{1, 17}, {280, 302}}</string>
 									<reference key="NSSuperview" ref="214051233"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="759651840"/>
 									<string key="NSReuseIdentifierKey">_NS:11</string>
 									<reference key="NSDocView" ref="759651840"/>
@@ -544,6 +552,7 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 									<reference key="NSSuperview" ref="214051233"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView"/>
 									<string key="NSReuseIdentifierKey">_NS:58</string>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -557,6 +566,7 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{1, 31}, {46, 16}}</string>
 									<reference key="NSSuperview" ref="214051233"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="395056104"/>
 									<string key="NSReuseIdentifierKey">_NS:60</string>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -573,6 +583,7 @@
 									</array>
 									<string key="NSFrame">{{1, 0}, {280, 17}}</string>
 									<reference key="NSSuperview" ref="214051233"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="126944102"/>
 									<string key="NSReuseIdentifierKey">_NS:15</string>
 									<reference key="NSDocView" ref="126944102"/>
@@ -582,6 +593,7 @@
 							</array>
 							<string key="NSFrame">{{178, 20}, {282, 320}}</string>
 							<reference key="NSSuperview" ref="914934427"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="980019924"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<int key="NSsFlags">133682</int>
@@ -597,6 +609,7 @@
 					</array>
 					<string key="NSFrameSize">{480, 360}</string>
 					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="595383528"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {2560, 1418}}</string>
@@ -606,7 +619,8 @@
 			<object class="NSUserDefaultsController" id="306933604">
 				<bool key="NSSharedInstance">YES</bool>
 			</object>
-			<object class="NSArrayController" id="986000005">
+			<object class="NSArrayController" id="1045995038">
+				<string key="NSObjectClassName">Channel</string>
 				<bool key="NSEditable">YES</bool>
 				<object class="_NSManagedProxy" key="_NSManagedProxy"/>
 				<bool key="NSAvoidsEmptySelection">YES</bool>
@@ -646,7 +660,7 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">channelArrayController</string>
 						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="986000005"/>
+						<reference key="destination" ref="1045995038"/>
 					</object>
 					<int key="connectionID">112</int>
 				</object>
@@ -802,10 +816,10 @@
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">value: arrangedObjects.genre</string>
 						<reference key="source" ref="1009545209"/>
-						<reference key="destination" ref="986000005"/>
+						<reference key="destination" ref="1045995038"/>
 						<object class="NSNibBindingConnector" key="connector">
 							<reference key="NSSource" ref="1009545209"/>
-							<reference key="NSDestination" ref="986000005"/>
+							<reference key="NSDestination" ref="1045995038"/>
 							<string key="NSLabel">value: arrangedObjects.genre</string>
 							<string key="NSBinding">value</string>
 							<string key="NSKeyPath">arrangedObjects.genre</string>
@@ -818,10 +832,10 @@
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">value: arrangedObjects.name</string>
 						<reference key="source" ref="741277743"/>
-						<reference key="destination" ref="986000005"/>
+						<reference key="destination" ref="1045995038"/>
 						<object class="NSNibBindingConnector" key="connector">
 							<reference key="NSSource" ref="741277743"/>
-							<reference key="NSDestination" ref="986000005"/>
+							<reference key="NSDestination" ref="1045995038"/>
 							<string key="NSLabel">value: arrangedObjects.name</string>
 							<string key="NSBinding">value</string>
 							<string key="NSKeyPath">arrangedObjects.name</string>
@@ -1467,8 +1481,9 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">111</int>
-						<reference key="object" ref="986000005"/>
+						<reference key="object" ref="1045995038"/>
 						<reference key="parent" ref="0"/>
+						<string key="objectName">ChannelArrayController</string>
 					</object>
 				</array>
 			</object>
@@ -1576,7 +1591,56 @@
 			<nil key="sourceID"/>
 			<int key="maxID">118</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">MTMainWindowController</string>
+					<string key="superclassName">NSWindowController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">reload:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">reload:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">reload:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="bookmarkOutlineView">NSOutlineView</string>
+						<string key="channelArrayController">NSArrayController</string>
+						<string key="channelTableView">NSTableView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="bookmarkOutlineView">
+							<string key="name">bookmarkOutlineView</string>
+							<string key="candidateClassName">NSOutlineView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="channelArrayController">
+							<string key="name">channelArrayController</string>
+							<string key="candidateClassName">NSArrayController</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="channelTableView">
+							<string key="name">channelTableView</string>
+							<string key="candidateClassName">NSTableView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MTMainWindowController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSLayoutConstraint</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
